# mkdocs-git-info-plugin

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/: FUNDING.yml
.github/workflows/: test.yml
mkdocs_git_info_plugin/: gitinfo.py  plugin.py
tests/: test_builds.py  test_mkdocs_git_info_plugin.py
tests/fixtures/basic_project/: mkdocs.yml
tests/fixtures/basic_project/docs/: index.md
